--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,7 +9,7 @@
     </div>
     <br/><br/>
     <div class="expanded-node-container" *ngIf="currentExpandedNode">
-      Expanded Node - {{currentExpandedNode.nodeDisplayName}} : {{currentExpandedNode.data | json}}
+      Last Expanded Node - {{currentExpandedNode.nodeDisplayName}} : {{currentExpandedNode.data | json}}
     </div>
   </div>
 </div>
