--- a/src/assets/css/icon-colors.css
+++ b/src/assets/css/icon-colors.css
@@ -5,3 +5,15 @@
 .node-icon.fa-server {
   color: #3F80A3;
 }
+
+.node-icon.fa-clipboard-list {
+  color: #FBAC5F
+}
+
+.node-icon.fa-table {
+  color: #BDDDEE;
+}
+
+.node-icon.fa-columns {
+  color: #67BDE1;
+}
