--- a/src/app/components/tree/tree-node/tree-node.component.html
+++ b/src/app/components/tree/tree-node/tree-node.component.html
@@ -2,7 +2,8 @@
   <div class="node-details" (click)="nodeSelect.emit(currentTreeNode)"
        [ngClass]="{'disabled': currentTreeNode.disabled}">
     <div class="expand-icon">
-      <i *ngIf="!currentTreeNode.isLeaf" class="fa fa-chevron-right" [ngClass]="{'expanded': currentTreeNode.expanded}"
+      <i *ngIf="!currentTreeNode.isLeaf && !currentTreeNode.disabled" class="fa fa-chevron-right"
+         [ngClass]="{'expanded': currentTreeNode.expanded}"
          (click)="nodeExpand.emit({currentExpandNode:currentTreeNode, event: $event})"></i>
     </div>
     <div class="node-content">
